collapsing issue resolved

--- a/public/styles.css
+++ b/public/styles.css
@@ -2,7 +2,18 @@ body {
   margin: 0;
   padding: 0;
   background-color: black;
+  animation: fadeIn 0.05s forwards;
 }
+
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
 .wrapper {
   padding: 10px;
   height: 97vh;
@@ -31,7 +42,7 @@ body {
   grid-area: 2/1/3/4;
 }
 .sec2 {
-  padding: 1rem;
+  padding: 1rem 1.7rem;
   overflow: auto;
   background-color: #121212;
 }
@@ -136,7 +147,6 @@ body {
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 1rem;
-  grid-gap: 0.5rem;
 }
 .list > .element {
   border-radius: 5px;
@@ -469,15 +479,14 @@ body {
   filter: invert(100);
 }
 .sec2 .mainScreen .playlistInfo img{
-  height: 15rem;
-  width: 15rem;
+  height: 13rem;
+  width: 13rem;
   border-radius: 5px;
 }
 .sec2 .mainScreen .playlistInfo{
-  display: grid;
-  grid-template-columns: 1fr 2fr;
+  display: flex;
   margin:2rem 0;
-  grid-gap: 0;
+  gap: 30px;
 }
 .sec2 .mainScreen .playlistInfo .textInfo .details{
   display:flex;
@@ -501,4 +510,19 @@ body {
 }
 .sec2 .mainScreen .playlistInfo .textInfo{
   font-family: "Kanit", sans-serif;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+.sec2 .mainScreen .playlistInfo .textInfo h4{
+  font-family: "Nunito", sans-serif;
+  margin: 0;
+}
+.sec2 .mainScreen .playlistInfo .textInfo h1{
+  font-size: 4.5rem;
+  margin: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
